@@ -110,7 +110,7 @@ public class CommandButtonRenderer extends CommandLinkRenderer
       if (accessKey != CHAR_UNDEFINED)
       {
         rw.writeAttribute("accesskey",
-                          new Character(accessKey),
+                          Character.valueOf(accessKey),
                           "accessKey");
       }                   
     }
