@@ -141,7 +141,7 @@ public class OutputLabelRenderer extends ValueRenderer
         if (accessKey != CHAR_UNDEFINED)
         {
           rw.writeAttribute("accesskey",
-                            new Character(accessKey),
+                            Character.valueOf(accessKey),
                             "accessKey");
           
         }                   
